# TC2025Class

./: .gitignore
Homeworks/: fun  fun.c  hw.c
Homeworks/1_matrix_mult/: Matrix_AxA.txt  Matrix_AxAxA.txt  Matrix_C.txt  Matrix_CxA.txt  main.c
Homeworks/2_base_conversions/: main.c
Homeworks/3_PPM_Images/: a.out  inverted.ppm  main  main.c  ppm.c  ppm.h  rot090d.ppm  rot180d.ppm  rot270d.ppm  test.ppm  test2.ppm
Homeworks/4_forks/: factorial  factorial.c  main  main.c
Homeworks/5_exam1/: decoded_encoded_aladdin.txt  encoded_aladdin.txt  encoded_test.txt  exam_main  exam_main.c  main  makefile  pipes  pipes.c  test  test.c  test.txt  testcat.c  testfile.c  vigenere.c  vigenere.h  vigenere_worker.c  vigenere_worker.h
Homeworks/6_sockets/: README.md  bj_comms.c  bj_comms.h  blackjack.c  blackjack.h  blackjack_c.c  blackjack_s  blackjack_s.c  fatal_error.c  fatal_error.h  makefile  test  test.c
Homeworks/7_signals/: Makefile  get_pi.c  pi_client.c  pi_server.c
Homeworks/8_exam2/: README.txt  bank_client.c  bank_codes.h  bank_server.c  server_definitions.h  server_utils.c  server_utils.h  test2.txt
Homeworks/9_exam3/: .gitignore  CMakeLists.txt  README.md  game.c  game.h  game_of_life.c  gif_maker.py  test.c
Homeworks/9_exam3/Boards/: big.txt  generator.py  gun.txt  oscilaltors.txt
Stuff/PPM_Images/: ppm.h  test.ppm  thing.c
Stuff/ex2/: Makefile  bank_client  bank_client.c  bank_codes.h  bank_server  bank_server.c  server_definitions.h  server_utils.c  server_utils.h  test.txt
Stuff/forks/: m  test.c
Stuff/piServer/: makefile  piServer.c  pi_client  (+4 more)
(+5 files in other folders)
